# anymal_b_simple_description

./: CMakeLists.txt  LICENSE  Readme.md  package.xml
config/rviz/: standalone.rviz
launch/: load.launch  standalone.launch
